Answer for boj_17136.ipynb

--- a/boj_1213.ipynb
+++ b/boj_1213.ipynb
@@ -170,14 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counter({'A': 4, 'B': 2, 'C': 1})\n",
       "AABCBAA\n"
      ]
     }
@@ -204,17 +203,8 @@
     "            ans += k\n",
     "            break\n",
     "        \n",
-    "    ans += \"\".join(reversed(half))\n",
+    "    ans += \"\".join(half[::-1])\n",
     "    print(ans)          "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ans = \"\""
    ]
   }
  ],
