dbn_greedy_2.ipynb

--- a/dbn_greedy_2.ipynb
+++ b/dbn_greedy_2.ipynb
@@ -17,6 +17,27 @@
     "n, k = map(int, input().split())\n",
     "print(\"n : \" + str(n) +  \"    k : \" + str(k))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = 0\n",
+    "\n",
+    "while True:\n",
+    "    target = (n // k) * k\n",
+    "    print(f\"target : {target}\")\n",
+    "    \n",
+    "    result += n - target\n",
+    "    n = target\n",
+    "    \n",
+    "    if n < k:\n",
+    "        break\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
