dbn_greedy_2.ipynb

--- a/dbn_greedy_2.ipynb
+++ b/dbn_greedy_2.ipynb
@@ -36,7 +36,11 @@
     "    if n < k:\n",
     "        break\n",
     "    \n",
-    "    "
+    "    n //= k\n",
+    "    result += 1\n",
+    "    print(f\"n : {n},  result : {result}\")\n",
+    "    \n",
+    "print(f\"result : {result}\")"
    ]
   }
  ],
