--- a/dbn_greedy_2.ipynb
+++ b/dbn_greedy_2.ipynb
@@ -20,9 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "target : 25\n",
+      "n : 5,  result : 4\n",
+      "target : 5\n",
+      "n : 1,  result : 5\n",
+      "target : 0\n",
+      "result : 6\n"
+     ]
+    }
+   ],
    "source": [
     "result = 0\n",
     "\n",
@@ -32,6 +45,7 @@
     "    \n",
     "    result += n - target\n",
     "    n = target\n",
+    "    print(f\"n : {n}\")\n",
     "    \n",
     "    if n < k:\n",
     "        break\n",
