dbn_greedy_2.ipynb

--- a/dbn_greedy_2.ipynb
+++ b/dbn_greedy_2.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n : 28    k : 5\n"
+      "n : 30    k : 7\n"
      ]
     }
    ],
@@ -20,19 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "target : 25\n",
-      "n : 5,  result : 4\n",
-      "target : 5\n",
-      "n : 1,  result : 5\n",
+      "target : 28\n",
+      "n : 28\n",
+      "n : 4,  result : 3\n",
       "target : 0\n",
-      "result : 6\n"
+      "n : 0\n",
+      "result : 7\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
     "    \n",
     "    result += n - target\n",
     "    n = target\n",
-    "    print(f\"n : {n}\")\n",
+    "    print(f\"n : {n}, result : {result}\")\n",
     "    \n",
     "    if n < k:\n",
     "        break\n",
