dbn_greedy_2.ipynb

--- a/dbn_greedy_2.ipynb
+++ b/dbn_greedy_2.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n : 30    k : 7\n"
+      "n : 31    k : 7\n"
      ]
     }
    ],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -28,11 +28,11 @@
      "output_type": "stream",
      "text": [
       "target : 28\n",
-      "n : 28\n",
-      "n : 4,  result : 3\n",
+      "n : 28, result : 3\n",
+      "n : 4,  result : 4\n",
       "target : 0\n",
-      "n : 0\n",
-      "result : 7\n"
+      "n : 0, result : 8\n",
+      "result : 8\n"
      ]
     }
    ],
@@ -53,7 +53,9 @@
     "    n //= k\n",
     "    result += 1\n",
     "    print(f\"n : {n},  result : {result}\")\n",
-    "    \n",
+    "    print()\n",
+    "\n",
+    "print()    \n",
     "print(f\"result : {result}\")"
    ]
   }
