dbn_greedy_2.ipynb

--- a/dbn_greedy_2.ipynb
+++ b/dbn_greedy_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -30,8 +30,10 @@
       "target : 28\n",
       "n : 28, result : 3\n",
       "n : 4,  result : 4\n",
+      "\n",
       "target : 0\n",
       "n : 0, result : 8\n",
+      "\n",
       "result : 8\n"
      ]
     }
@@ -57,6 +59,36 @@
     "\n",
     "print()    \n",
     "print(f\"result : {result}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = 0\n",
+    "\n",
+    "while True:\n",
+    "    target = (n // k) * k\n",
+    "    result += (n - target)\n",
+    "    n = target\n",
+    "    \n",
+    "    if n < k:\n",
+    "        break\n",
+    "    result += 1\n",
+    "    n //= k\n",
+    "    \n",
+    "result += (n - 1)\n",
+    "print(result)"
    ]
   }
  ],
