--- a/dbn_greedy_2.ipynb
+++ b/dbn_greedy_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -20,19 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "target : 28\n",
-      "n : 28, result : 3\n",
+      "n : 28,  target : 28,  result : 3\n",
       "n : 4,  result : 4\n",
       "\n",
-      "target : 0\n",
-      "n : 0, result : 8\n",
+      "n : 0,  target : 0,  result : 8\n",
       "\n",
       "result : 8\n"
      ]
@@ -42,12 +40,10 @@
     "result = 0\n",
     "\n",
     "while True:\n",
-    "    target = (n // k) * k\n",
-    "    print(f\"target : {target}\")\n",
-    "    \n",
-    "    result += n - target\n",
+    "    target = (n // k) * k   \n",
+    "    result += (n - target)\n",
     "    n = target\n",
-    "    print(f\"n : {n}, result : {result}\")\n",
+    "    print(f\"n : {n},  target : {target},  result : {result}\")\n",
     "    \n",
     "    if n < k:\n",
     "        break\n",
@@ -63,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
