dbn_greedy_2.ipynb

--- a/dbn_greedy_2.ipynb
+++ b/dbn_greedy_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -53,6 +53,7 @@
     "    print(f\"n : {n},  result : {result}\")\n",
     "    print()\n",
     "\n",
+    "result += (n - 1)\n",
     "print()    \n",
     "print(f\"result : {result}\")"
    ]
