dbn_greedy_2.ipynb

--- a/dbn_greedy_2.ipynb
+++ b/dbn_greedy_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
       "\n",
       "n : 0,  target : 0,  result : 8\n",
       "\n",
-      "result : 8\n"
+      "result : 7\n"
      ]
     }
    ],
@@ -86,6 +86,35 @@
     "    \n",
     "result += (n - 1)\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n, k = map(int, input().split())\n",
+    "import time\n",
+    "\n",
+    "start_time = time.time()\n",
+    "cnt = 0\n",
+    "\n",
+    "while n >= 1:\n",
+    "  if n % k == 0:\n",
+    "    n //= k\n",
+    "    cnt += 1\n",
+    "    print(f\"Division  n : {n},  cnt : {cnt}\")\n",
+    "  else:\n",
+    "    n -= 1\n",
+    "    cnt += 1\n",
+    "    print(f\"Subtraction : n : {n}, cnt : {cnt}\")\n",
+    "  if n == 1:\n",
+    "    break\n",
+    "print()\n",
+    "print(cnt)\n",
+    "end_time = time.time()\n",
+    "print(\"time spent : {end_time - start_time}\")"
    ]
   }
  ],
