dbn_greedy_2.ipynb

--- a/dbn_greedy_2.ipynb
+++ b/dbn_greedy_2.ipynb
@@ -90,9 +90,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subtraction : n : 30, cnt : 1\n",
+      "Subtraction : n : 29, cnt : 2\n",
+      "Subtraction : n : 28, cnt : 3\n",
+      "Division  n : 4,  cnt : 4\n",
+      "Subtraction : n : 3, cnt : 5\n",
+      "Subtraction : n : 2, cnt : 6\n",
+      "Subtraction : n : 1, cnt : 7\n",
+      "\n",
+      "7\n",
+      "time spent : {end_time - start_time}\n"
+     ]
+    }
+   ],
    "source": [
     "n, k = map(int, input().split())\n",
     "import time\n",
@@ -114,7 +131,7 @@
     "print()\n",
     "print(cnt)\n",
     "end_time = time.time()\n",
-    "print(\"time spent : {end_time - start_time}\")"
+    "print(\"time spent : {end_time} - {start_time}\")"
    ]
   }
  ],
