dbn_greedy_2.ipynb

--- a/dbn_greedy_2.ipynb
+++ b/dbn_greedy_2.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
       "Subtraction : n : 1, cnt : 7\n",
       "\n",
       "7\n",
-      "time spent : {end_time - start_time}\n"
+      "time spent : {end_time} - {start_time}\n"
      ]
     }
    ],
@@ -115,6 +115,7 @@
     "import time\n",
     "\n",
     "start_time = time.time()\n",
+    "\n",
     "cnt = 0\n",
     "\n",
     "while n >= 1:\n",
@@ -131,7 +132,7 @@
     "print()\n",
     "print(cnt)\n",
     "end_time = time.time()\n",
-    "print(\"time spent : {end_time} - {start_time}\")"
+    "print(f\"time spent : {end_time} - {start_time}\")"
    ]
   }
  ],
