--- a/dbn_greedy_2.ipynb
+++ b/dbn_greedy_2.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
       "Subtraction : n : 1, cnt : 7\n",
       "\n",
       "7\n",
-      "time spent : {end_time} - {start_time}\n"
+      "time spent : 0.0020208358764648438\n"
      ]
     }
    ],
@@ -122,7 +122,7 @@
     "  if n % k == 0:\n",
     "    n //= k\n",
     "    cnt += 1\n",
-    "    print(f\"Division  n : {n},  cnt : {cnt}\")\n",
+    "    print(f\"Division     n : {n},  cnt : {cnt}\")\n",
     "  else:\n",
     "    n -= 1\n",
     "    cnt += 1\n",
@@ -131,8 +131,7 @@
     "    break\n",
     "print()\n",
     "print(cnt)\n",
-    "end_time = time.time()\n",
-    "print(f\"time spent : {end_time} - {start_time}\")"
+    "print(f\"time spent : {time.time() - start_time}\")"
    ]
   }
  ],
