dbn_greedy_2.ipynb

--- a/dbn_greedy_2.ipynb
+++ b/dbn_greedy_2.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -100,13 +100,13 @@
       "Subtraction : n : 30, cnt : 1\n",
       "Subtraction : n : 29, cnt : 2\n",
       "Subtraction : n : 28, cnt : 3\n",
-      "Division     n : 4,  cnt : 4\n",
+      "Division      n : 4,  cnt : 4\n",
       "Subtraction : n : 3, cnt : 5\n",
       "Subtraction : n : 2, cnt : 6\n",
       "Subtraction : n : 1, cnt : 7\n",
       "\n",
       "7\n",
-      "time spent : 0.0010099411010742188\n"
+      "time spent : 0.001016855239868164\n"
      ]
     }
    ],
@@ -122,16 +122,16 @@
     "  if n % k == 0:\n",
     "    n //= k\n",
     "    cnt += 1\n",
-    "    print(f\"Division      n : {n},  cnt : {cnt}\")\n",
+    "    print(f\"Division      n : {n:3d},  cnt : {cnt}\")\n",
     "  else:\n",
     "    n -= 1\n",
     "    cnt += 1\n",
-    "    print(f\"Subtraction : n : {n}, cnt : {cnt}\")\n",
+    "    print(f\"Subtraction : n : {n:3d}, cnt : {cnt}\")\n",
     "  if n == 1:\n",
     "    break\n",
     "print()\n",
     "print(cnt)\n",
-    "print(f\"time spent : {time.time() - start_time}\")"
+    "print(f\"time spent : {round(time.time() - start_time}, 5)\")"
    ]
   }
  ],
