--- a/dbn_greedy_2.ipynb
+++ b/dbn_greedy_2.ipynb
@@ -90,23 +90,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Subtraction : n : 30, cnt : 1\n",
-      "Subtraction : n : 29, cnt : 2\n",
-      "Subtraction : n : 28, cnt : 3\n",
-      "Division      n : 4,  cnt : 4\n",
-      "Subtraction : n : 3, cnt : 5\n",
-      "Subtraction : n : 2, cnt : 6\n",
-      "Subtraction : n : 1, cnt : 7\n",
-      "\n",
-      "7\n",
-      "time spent : 0.001016855239868164\n"
+     "ename": "SyntaxError",
+     "evalue": "f-string: closing parenthesis '}' does not match opening parenthesis '(' (2817287055.py, line 21)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [33]\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"time spent : {round(time.time() - start_time}, 5)\")\u001b[0m\n\u001b[1;37m                                                              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m f-string: closing parenthesis '}' does not match opening parenthesis '('\n"
      ]
     }
    ],
@@ -131,7 +123,7 @@
     "    break\n",
     "print()\n",
     "print(cnt)\n",
-    "print(f\"time spent : {round(time.time() - start_time}, 5)\")"
+    "print(f\"time spent : {round(time.time() - start_time, 5)}\")"
    ]
   }
  ],
