dbn_greedy_2.ipynb

--- a/dbn_greedy_3.ipynb
+++ b/dbn_greedy_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -14,8 +14,26 @@
     }
    ],
    "source": [
-    "x = input()\n",
-    "print(x)"
+    "n = input()\n",
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = 0\n",
+    "\n",
+    "for i, x in enumerate(n):\n",
+    "    if x == \"0\" or x == \"1\":\n",
+    "        nxt_dgt = n[n.index(x) + 1]\n",
+    "        result += (x + nxt_dgt)\n",
+    "    else:\n",
+    "        result *= x\n",
+    "        \n",
+    "print(result)"
    ]
   }
  ],
