dbn_greedy_2.ipynb

--- a/dbn_greedy_3.ipynb
+++ b/dbn_greedy_3.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "028934\n"
+      "02984\n"
      ]
     }
    ],
@@ -20,20 +20,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0번째 x : 2984,   result : 0\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "result = 0\n",
+    "result = int(n[0])\n",
     "\n",
-    "for i, x in enumerate(n):\n",
-    "    if x == \"0\" or x == \"1\":\n",
-    "        nxt_dgt = n[n.index(x) + 1]\n",
-    "        result += (x + nxt_dgt)\n",
-    "    else:\n",
-    "        result *= x\n",
+    "for i, x in enumerate(n):   \n",
+    "    if x == \"0\":    \n",
+    "        continue\n",
+    "    elif x == 1:    \n",
+    "        result += int(x)       \n",
+    "    else:        \n",
+    "        result *= int(x)\n",
+    "    \n",
+    "    print(f\"{i}번째 x : {x},   result : {result}\")\n",
     "        \n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1152"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "576 * 2"
    ]
   }
  ],
