dbn_greedy_2.ipynb

--- a/dbn_greedy_3.ipynb
+++ b/dbn_greedy_3.ipynb
@@ -20,23 +20,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0번째 x : 2984,   result : 0\n",
-      "0\n"
+      "1번째 x : 2,   result : 2\n",
+      "2번째 x : 9,   result : 18\n",
+      "3번째 x : 8,   result : 144\n",
+      "4번째 x : 4,   result : 576\n",
+      "576\n"
      ]
     }
    ],
    "source": [
     "result = int(n[0])\n",
     "\n",
-    "for i, x in enumerate(n):   \n",
-    "    if x == \"0\":    \n",
+    "for i, x in enumerate(n): \n",
+    "    if i == 0:\n",
+    "        continue  \n",
+    "    if result == 0:    \n",
+    "        result = int(x)\n",
+    "    elif x == 0:\n",
     "        continue\n",
     "    elif x == 1:    \n",
     "        result += int(x)       \n",
