More on dbn_implementation_01.ipynb

--- a/dbn_implementation_01.ipynb
+++ b/dbn_implementation_01.ipynb
@@ -80,7 +80,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y, x = 1, 1\n",
+    "dy = (1, 0, -1, 0)\n",
+    "dx = (0, 1, 0, -1)\n",
+    "\n",
+    "# L U U R R R U D R D D   # R R R U D D \n",
+    "for i, ch in enumerate(input().split()):\n",
+    "    if ch == 'D' and is_coord_valid(y+dy[0], x+dx[0]):\n",
+    "        ny, nx = y + dy[0], x + dx[0]\n",
+    "    elif ch == 'R' and is_coord_valid(y+dy[1], x+dx[1]):\n",
+    "        ny, nx = y + dy[1], x + dx[1]\n",
+    "    elif ch == 'U' and is_coord_valid(y+dy[2], x+dx[2]):\n",
+    "        ny, nx = y + dy[2], x + dx[2]\n",
+    "    elif ch == 'L' and is_coord_valid(y+dy[3], x+dx[3]):\n",
+    "        ny, nx = y + dy[3], x + dx[3]\n",
+    "    else:\n",
+    "        continue\n",
+    "    \n",
+    "    y, x = ny, nx\n",
+    "    print(f\"{i} : {ch} : {y, x}--> \", end='')\n",
+    "        \n",
+    "print((y, x))       "
+   ]
   }
  ],
  "metadata": {
