--- a/dbn_implementation_01.ipynb
+++ b/dbn_implementation_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,9 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 : R : (1, 2)--> 1 : R : (1, 3)--> 2 : R : (1, 4)--> 4 : D : (2, 4)--> 5 : D : (3, 4)--> (3, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "y, x = 1, 1\n",
     "dy = (1, 0, -1, 0)\n",
@@ -99,7 +107,7 @@
     "        continue\n",
     "    \n",
     "    y, x = ny, nx\n",
-    "    print(f\"{i} : {ch} : {y, x}--> \", end='')\n",
+    "    print(f\"({i},{ch}) : {y, x}--> \", end='')\n",
     "        \n",
     "print((y, x))       "
    ]
