--- a/dbn_implementation_02.ipynb
+++ b/dbn_implementation_02.ipynb
@@ -2,19 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = int(input())"
+    "N = input()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start time : 000000,    end time : 055959\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_time = \"000000\"\n",
+    "end_time = \"0\" + N + \"5959\" if int(N) < 10 else N + \"5959\"\n",
+    "print(f\"start time : {start_time},    end time : {end_time}\")"
+   ]
   }
  ],
  "metadata": {
@@ -24,7 +36,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
   "orig_nbformat": 4
