More on dbn_implementation_01.ipynb

--- a/dbn_implementation_02.ipynb
+++ b/dbn_implementation_02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start time : 000000,    end time : 055959\n"
+      "start time : 000000,    end time : 235959\n"
      ]
     }
    ],
@@ -26,6 +26,53 @@
     "start_time = \"000000\"\n",
     "end_time = \"0\" + N + \"5959\" if int(N) < 10 else N + \"5959\"\n",
     "print(f\"start time : {start_time},    end time : {end_time}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def strToint(x):\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "545"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strToint(\"050415\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1, a2 = \"00\", \"15\"\n",
+    "print(eval(a1))"
    ]
   }
  ],
