--- a/dbn_implementation_02.ipynb
+++ b/dbn_implementation_02.ipynb
@@ -2,19 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43875\n"
+     ]
+    }
+   ],
    "source": [
-    "N = input()"
+    "N = int(input())\n",
+    "cnt = 0\n",
+    "\n",
+    "for i in range(N+1):\n",
+    "    for j in range(60):\n",
+    "        for k in range(60):\n",
+    "            if \"3\" in str(i) + str(j) + str(k):\n",
+    "                cnt += 1\n",
+    "print(cnt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(\"05\")"
+   ]
   }
  ],
  "metadata": {
