More on Simulation, Brute Forcing, Implementation

--- a/dbn_implementation_03.ipynb
+++ b/dbn_implementation_03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -36,109 +36,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def is_valid_coord(y, x):\n",
-    "    return 0 <= y <= 7 and 0 <= x <= 7"
+    "is_valid_coord(8, 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 6 7g\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "7 8\n",
-      "0\n"
+      "8h\n",
+      "2\n"
      ]
     }
    ],
    "source": [
+    "ch = input()\n",
+    "print(ch)\n",
+    "\n",
+    "row, col = '12345678', 'abcdefgh'\n",
+    "board = [[(i, j, r+c) for j, c in enumerate(col)] for i, r in enumerate(row)]\n",
+    "\n",
+    "cnt = 0\n",
+    "i, j = 0, 0\n",
+    "\n",
+    "def is_valid_coord(y, x):\n",
+    "    return 0 <= y <= 7 and 0 <= x <= 7\n",
+    "\n",
     "dy = (-2, -2,  2, 2, -1, -1,  1, 1)\n",
     "dx = (-1,  1, -1, 1, -2,  2, -2, 2)\n",
     "\n",
-    "for i in range(len(board)):\n",
-    "    for j in range(len(board[i])):\n",
-    "        if board[i][j][2] == ch:\n",
-    "            print(i, j, ch)\n",
-    "            y, x = i, j\n",
-    "            \n",
-    "for k in range(8):\n",
-    "    ny = y + dy[i]\n",
-    "    nx = x + dx[i]\n",
-    "    print(ny, nx)\n",
-    "    if is_valid_coord(ny, nx):\n",
-    "        cnt += 1\n",
-    "            \n",
+    "while True:\n",
+    "    if board[i][j][2] == ch:\n",
+    "        y, x = i, j\n",
+    "        for k in range(8):\n",
+    "            ny = y + dy[k]\n",
+    "            nx = x + dx[k]\n",
+    "            if is_valid_coord(ny, nx):\n",
+    "                cnt += 1\n",
+    "        break\n",
+    "    else:\n",
+    "        if 0 <= i <= 6 and 0 <= j <= 6:\n",
+    "            i += 1\n",
+    "            j += 1\n",
+    "        elif i == 7:\n",
+    "            break\n",
+    "        elif j == 7:\n",
+    "            j = 0\n",
     "print(cnt)"
    ]
   }
