More on Simulation, Brute Forcing, Implementation

--- a/dbn_implementation_03.ipynb
+++ b/dbn_implementation_03.ipynb
@@ -56,15 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8h\n",
-      "2\n"
+      "8a\n",
+      "0\n"
      ]
     }
    ],
@@ -102,6 +102,48 @@
     "        elif j == 7:\n",
     "            j = 0\n",
     "print(cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4d\n",
+      "(0, 7, '4d'),  cnt : 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "ch = input()\n",
+    "print(ch)\n",
+    "\n",
+    "row, col = '12345678', 'abcdefgh'\n",
+    "board = [[(i, j, r+c) for j, c in enumerate(col)] for i, r in enumerate(row)]\n",
+    "\n",
+    "cnt = 0\n",
+    "\n",
+    "def is_valid_coord(y, x):\n",
+    "    return 0 <= y <= 7 and 0 <= x <= 7\n",
+    "\n",
+    "dy = (-2, -2,  2, 2, -1, -1,  1, 1)\n",
+    "dx = (-1,  1, -1, 1, -2,  2, -2, 2)\n",
+    "\n",
+    "for i in range(len(board)):\n",
+    "    for j in range(len(board[i])):\n",
+    "        if board[i][j][2] == ch:\n",
+    "            for k in range(8):\n",
+    "                ny = y + dy[k]\n",
+    "                nx = x + dx[k]\n",
+    "                if is_valid_coord(ny, nx):\n",
+    "                    cnt += 1\n",
+    "    break\n",
+    "\n",
+    "print(f\"{(i, j, ch)},  cnt : {cnt}\")"
    ]
   }
  ],
