--- a/dbn_greedy_4.ipynb
+++ b/dbn_greedy_4.ipynb
@@ -75,10 +75,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0) (0, 1) (0, 2) (0, 3) (0, 4) \n",
+      "(1, 0) (1, 1) (1, 2) (1, 3) (1, 4) \n",
+      "(2, 0) (2, 1) (2, 2) (2, 3) (2, 4) \n",
+      "(3, 0) (3, 1) (3, 2) (3, 3) (3, 4) \n",
+      "(4, 0) (4, 1) (4, 2) (4, 3) (4, 4) \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    for j in range(5):\n",
+    "        print(f\"{i, j}\", end=' ')\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
