--- a/dbn_recursive_fcn_01.ipynb
+++ b/dbn_recursive_fcn_01.ipynb
@@ -2,18 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_recursive_fcn_01.ipynb Cell 1\u001b[0m line \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m a, b \u001b[39m=\u001b[39m \u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39m()\u001b[39m.\u001b[39msplit())\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m a, b \u001b[39m=\u001b[39m a, b \u001b[39mif\u001b[39;00m a \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m b \u001b[39melse\u001b[39;00m b, a\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_recursive_fcn_01.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39ma : \u001b[39m\u001b[39m{\u001b[39;00ma\u001b[39m}\u001b[39;00m\u001b[39m,   b : \u001b[39m\u001b[39m{\u001b[39;00mb\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a : 15,   b : 8\n"
      ]
     }
    ],
@@ -25,11 +21,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_gcd(n)"
+    "def calc_gcd(n):\n",
+    "    global a, b\n",
+    "    if n == 0:\n",
+    "        return a\n",
+    "    elif n == 1:\n",
+    "        return b\n",
+    "    \n",
+    "    if calc_gcd(n) % calc_gcd(n+1) == 0:\n",
+    "        return calc_gcd(n+1)\n",
+    "    elif calc_gcd(n) % calc_gcd(n+1) == 1:\n",
+    "        return 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "calc_gcd(3)"
    ]
   }
  ],
